2015-11-16  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Re-enable --strace 1 test.

2015-11-16  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Remove some commented code.

2015-11-16  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Refer to "DejaGnu version", not "Framework
	version" in --version output.
	* testsuite/runtest.all/options.exp: Update test case.

2015-11-14  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Improve help text.

2015-11-12  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Sort options in usage.

2015-11-12  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (note): Remove old commented-out code.

2015-11-11  Ben Elliston  <bje@gnu.org>

	* doc/user.xml (Summary File): 'untested', not 'runtested'.
	* doc/dejagnu.texi: Regenerate.

2015-11-11  Michael Forney  <forney@google.com>

	* lib/target.exp (default_target_compile): Honor LDFLAGS_FOR_TARGET.

2015-11-11  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Regenerate.

2015-11-10  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Fix runtest output formatting in <programlisting>.

2015-11-10  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Update month and year.
	* doc/user.xml: Lots of editorial fixes from Daniel Thibault
	<Daniel.Thibault@drdc-rddc.gc.ca>.

2015-09-10  Robert Suchanek  <Robert.Suchanek@imgtec.com>

	* baseboards/multi-sim.exp (rpath_flags): Add libgomp.so check.

2015-07-30  Pedro Alves  <palves@redhat.com>

	* lib/remote.exp (close_wait_program): New procedure.
	(local_exec, standard_close): Use it.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Fix broken URLs.
	* doc/dejagnu.texi: Regenerate.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Fix 'crosscompilation'.

2015-05-23  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1 (log_dialog): Improve documentation.

2015-05-16  Filipe Brandenburger  <filbranden@google.com>

	* configure.ac: Enable subdir-objects, require automake 1.14.